--- a/.github/workflows/package.json
+++ b/.github/workflows/package.json
@@ -3,7 +3,37 @@
   "version": "1.0.0",
   "description": "Pinterest Video Downloader Web App",
   "main": "server/server.js",
+  "scripts": {{
+  "name": "pinterest-video-downloader",
+  "version": "1.0.0",
+  "description": "Pinterest Video Downloader Web App",
+  "main": "server/server.js",
   "scripts": {
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js",
+    "build": "mkdir -p client/build && echo 'Build step complete'",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "puppeteer": "^19.7.2",
+    "winston": "^3.8.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
+
     "start": "node server/server.js",
     "dev": "nodemon server/server.js",
     "build": "mkdir -p client/build && echo 'Build step complete'",
